# algorithm-visualizer

./: .gitignore  .prettierrc  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  tests.yml
av-app/: Cargo.toml  README.md  build.rs
av-app/docs/: design.md
av-app/src/: app.rs  dynamic_list.rs  icon.rs  lib.rs  main.rs  resizable_panels.rs  sidebar.rs  visualizer_page.rs
av-client/: Cargo.toml
av-client/algorithms/insertion-sort/: definition.toml
av-client/src/: build.rs  main.rs
av-common/: Cargo.toml
av-common/src/: lib.rs  supported.rs
av-compiler/: Cargo.toml  README.md
av-execute/: Cargo.toml  README.md
av-execute/src/: lib.rs
av-tracer/: Cargo.toml  README.md
av-tracer/src/: lib.rs  trace.schema.json
av-tracer/src/ecmascript/: tracer.js
av-transform/: Cargo.toml  README.md
av-transform/src/: error.rs  lib.rs
av-transform/src/ecma/: ast_visitor.rs  mod.rs  transform.rs
docs/: research.md  todo.md
public/: index.html  manifest.json
src/: global-env.d.ts  index.tsx  react-app-env.d.ts  setupTests.ts  styled.d.ts  svg-loader.d.ts  tracer.test.ts  tracer.ts
src/algorithms/: index.ts  tracers.ts  types.ts
src/algorithms/graph-depth-first-search/: README.md  algorithm.ts  index.ts  types.ts  visualiser.tsx
src/algorithms/insertion-sort/: README.md  algorithm.ts  index.ts  insertion-sort.test.ts  test.ts  types.ts  visualiser.tsx
src/algorithms/selection-sort/: README.md  algorithm.ts  index.ts  types.ts  visualiser.tsx
src/app/: hooks.ts  index.tsx  reset.css  style.css  style.ts  test.tsx
src/app/components/: button.ts  button.tsx  index.ts
src/app/controls/: index.tsx  style.css
src/app/debugger/: index.tsx
src/app/homepage/: index.tsx  style.ts
src/app/menu/: index.tsx  style.css
src/app/router/: index.tsx  style.ts
src/app/visualiser/: index.tsx  state.tsx  style.css
src/code-generator/: README.md  code-generator.test.ts  index.ts
src/tracer/: index.ts  test.ts  tracer.test.ts
src/utilities/: index.ts  predicates.ts  utilities.test.ts
src/visualisers/: insertion-sort.tsx
(+35 files in other folders)
